$Id: NEWS,v 1.94 2001-04-11 18:57:41 flood Exp $

1.2.2rc2 - CVS
---------------------------------
- Bug 1093 - Checking for world writable log files and symlinks.
- Bug 1094 - AuthUserFile/AuthGroupFile disallow relative paths.
- Bug 1096 - Case sensitivity issues in config, better checking of
  RLimit* directive arguments.

1.2.2rc1 - Released 03/24/2001
---------------------------------
- Bug 1085 - Better logging of "User is not a UserAlias" and "Can't find
  user."
- Bug 1043 - Fixed possible infinite loop in bandwidth throttling code.
- New RLimit* directives used to control resource usage on support platforms.
- Bug 1075 - Sub-contexts (<Directory>, etc) weren't being fully copied from
  <Global> to vhosts.
- Bug 1049 - New User/Groups weren't being seen after startup w/out a SIGHUP.
- Bug 1066 - new GNU glob() and friends, which properly limits recursion and
  avoids DoS issues.  Built-in glob support is now always compiled in to
  proftpd regardless of libc support on build platform.
- New directive "MasqueradeAddress", used to emit a "fake" (non-interface) IP
  in server ident, magic cookies and PASV commands.  Useful for firewalled or
  NAT'd networks that are not FTP aware.
- Bug 1044 - New directive "AccessDenyMsg", works just like AccessAllowMsg,
  but does the obvious.
- Bug 1055 - Not really a bug, but still .. ftpwho/ftpcount now attempt to
  scan proftpd.conf looking for ScoreboardPath, if all else fails
- Bug 1042 - <Directory /> arbitrarily not matching.

1.2.1 - Released 03/01/2001
---------------------------------
- A relatively major issue was discovered with session.groups which may cause
  any group-expressions inside of <Limit> (DenyGroup, etc) to malfunction.
  This is the primary reason for the 1.2.1 release.
- Default CFLAGS changed from "-g3 -O6" to "-O2" because it is reported
  that -O6 is highly experimental, and including debugging really isn't all
  the useful, as someone _really_ interested in debugging can edit Make.rules.